{
  "version": 4,
  "terraform_version": "1.14.3",
  "serial": 773,
  "lineage": "114c142e-a2a7-707c-0570-2f1aaf9204b9",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "athena_sit_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].mumbai",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a3d0ecca123f4f12",
            "arn": "arn:aws:ec2:ap-south-1:010438478476:elastic-ip/eipalloc-0a3d0ecca123f4f12",
            "association_id": "eipassoc-0bc1ee7a49e0e1110",
            "domain": "vpc",
            "id": "eipalloc-0a3d0ecca123f4f12",
            "instance": "i-027bc99bc0a6862e7",
            "network_border_group": "ap-south-1",
            "network_interface": "eni-0011a8edcc0266a29",
            "private_dns": "ip-10-11-12-219.ap-south-1.compute.internal",
            "private_ip": "10.11.12.219",
            "public_dns": "ec2-3-109-83-135.ap-south-1.compute.amazonaws.com",
            "public_ip": "3.109.83.135",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "athena-sit-eip"
            },
            "tags_all": {
              "Name": "athena-sit-eip"
            },
            "vpc": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "athena_uat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].mumbai",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04bb883bcf4dca058",
            "arn": "arn:aws:ec2:ap-south-1:010438478476:elastic-ip/eipalloc-04bb883bcf4dca058",
            "association_id": "eipassoc-01fb0cc61e00a6527",
            "domain": "vpc",
            "id": "eipalloc-04bb883bcf4dca058",
            "instance": "i-0f1c3724dc8e75aa8",
            "network_border_group": "ap-south-1",
            "network_interface": "eni-0ae44a750dc276b5d",
            "private_dns": "ip-10-11-18-121.ap-south-1.compute.internal",
            "private_ip": "10.11.18.121",
            "public_dns": "ec2-65-1-17-90.ap-south-1.compute.amazonaws.com",
            "public_ip": "65.1.17.90",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "athena-uat-eip"
            },
            "tags_all": {
              "Name": "athena-uat-eip"
            },
            "vpc": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "bastion_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].mumbai",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03273e55712e9cc74",
            "arn": "arn:aws:ec2:ap-south-1:010438478476:elastic-ip/eipalloc-03273e55712e9cc74",
            "association_id": "eipassoc-036cc4bc3257b4e4f",
            "domain": "vpc",
            "id": "eipalloc-03273e55712e9cc74",
            "instance": "i-087b0e7189b7109e9",
            "network_border_group": "ap-south-1",
            "network_interface": "eni-07dbf323b38e4f317",
            "private_dns": "ip-10-11-5-206.ap-south-1.compute.internal",
            "private_ip": "10.11.5.206",
            "public_dns": "ec2-3-108-171-213.ap-south-1.compute.amazonaws.com",
            "public_ip": "3.108.171.213",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "bastionhost-ip"
            },
            "tags_all": {
              "Name": "bastionhost-ip"
            },
            "vpc": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "airflow",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].mumbai",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-07216ac99dc46a187",
            "arn": "arn:aws:ec2:ap-south-1:010438478476:instance/i-04edb6ef6eb034b61",
            "associate_public_ip_address": false,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-04edb6ef6eb034b61",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "stopped",
            "instance_type": "t3.large",
            "ipv6_address_count": 0,
            "key_name": "testkey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0664ba9b304d35965",
            "private_dns": "ip-10-11-15-197.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.11.15.197",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-06709fed4b078039f",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0676b17d05babe69f",
            "tags": {
              "Name": "Airflow-dev"
            },
            "tags_all": {
              "Name": "Airflow-dev"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0806eac4ea98b156a"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_key_pair.bastion_auth",
            "aws_security_group.bastion_sg",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "tls_private_key.bastion_key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "athena_sit",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].mumbai",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-07216ac99dc46a187",
            "arn": "arn:aws:ec2:ap-south-1:010438478476:instance/i-027bc99bc0a6862e7",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "EC2-SSM-Access",
            "id": "i-027bc99bc0a6862e7",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "c7i.large",
            "ipv6_address_count": 0,
            "key_name": "testkey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0011a8edcc0266a29",
            "private_dns": "ip-10-11-12-219.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.11.12.219",
            "public_dns": "ec2-3-109-83-135.ap-south-1.compute.amazonaws.com",
            "public_ip": "3.109.83.135",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-06f8b7bc1ef1e271c",
                "volume_size": 30,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0676b17d05babe69f",
            "tags": {
              "Name": "Athena-sit"
            },
            "tags_all": {
              "Name": "Athena-sit"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0806eac4ea98b156a"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_key_pair.bastion_auth",
            "aws_security_group.bastion_sg",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "tls_private_key.bastion_key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "athena_uat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].mumbai",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-07216ac99dc46a187",
            "arn": "arn:aws:ec2:ap-south-1:010438478476:instance/i-06060970128e007d0",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "EC2-SSM-Access",
            "id": "i-06060970128e007d0",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "c7i.large",
            "ipv6_address_count": 0,
            "key_name": "testkey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0219ff95a73b2aff1",
            "private_dns": "ip-10-11-0-131.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.11.0.131",
            "public_dns": "ec2-65-2-129-177.ap-south-1.compute.amazonaws.com",
            "public_ip": "65.2.129.177",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0cbbebb0b5e1d5326",
                "volume_size": 30,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0676b17d05babe69f",
            "tags": {
              "Name": "Athena-uat"
            },
            "tags_all": {
              "Name": "Athena-uat"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0806eac4ea98b156a"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_key_pair.bastion_auth",
            "aws_security_group.bastion_sg",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "tls_private_key.bastion_key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].mumbai",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ade68f094cc81635",
            "arn": "arn:aws:ec2:ap-south-1:010438478476:instance/i-087b0e7189b7109e9",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": true,
            "ebs_optimized": true,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "ssm-ec2-instance",
            "id": "i-087b0e7189b7109e9",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3a.large",
            "ipv6_address_count": 0,
            "key_name": "testkey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-07dbf323b38e4f317",
            "private_dns": "ip-10-11-5-206.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.11.5.206",
            "public_dns": "ec2-3-108-171-213.ap-south-1.compute.amazonaws.com",
            "public_ip": "3.108.171.213",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 150,
                "throughput": 0,
                "volume_id": "vol-0af85efde83a3c9ba",
                "volume_size": 50,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0676b17d05babe69f",
            "tags": {
              "Env": "Dev",
              "Name": "Fvrk-dev-bastion-host"
            },
            "tags_all": {
              "Env": "Dev",
              "Name": "Fvrk-dev-bastion-host"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0806eac4ea98b156a"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_key_pair.bastion_auth",
            "aws_security_group.bastion_sg",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "tls_private_key.bastion_key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "mongo-redis-dev",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].mumbai",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a524481113ca6b94",
            "arn": "arn:aws:ec2:ap-south-1:010438478476:instance/i-0c5bffb2cc2b6244c",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c5bffb2cc2b6244c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3a.medium",
            "ipv6_address_count": 0,
            "key_name": "testkey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-064dc77415fffa9e6",
            "private_dns": "ip-10-11-4-53.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.11.4.53",
            "public_dns": "ec2-65-0-12-172.ap-south-1.compute.amazonaws.com",
            "public_ip": "65.0.12.172",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-00e57d3bc02c9f830",
                "volume_size": 50,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0676b17d05babe69f",
            "tags": {
              "Env": "Dev",
              "Name": "mongo-redis-dev"
            },
            "tags_all": {
              "Env": "Dev",
              "Name": "mongo-redis-dev"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-032f017ac20f3b750"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_key_pair.bastion_auth",
            "aws_security_group.mongo-redis-dev_sg",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "tls_private_key.bastion_key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].mumbai",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:010438478476:internet-gateway/igw-0b3b9f7a77adf26c6",
            "id": "igw-0b3b9f7a77adf26c6",
            "owner_id": "010438478476",
            "tags": {
              "Name": "FVRK-DEV-IGW"
            },
            "tags_all": {
              "Name": "FVRK-DEV-IGW"
            },
            "vpc_id": "vpc-01559cc551ee9ce1f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:010438478476:loadbalancer/app/Fvrk-dev-alb/67ed6ab2ef1a162a",
            "arn_suffix": "app/Fvrk-dev-alb/67ed6ab2ef1a162a",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "Fvrk-dev-alb-1180618260.ap-south-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:ap-south-1:010438478476:loadbalancer/app/Fvrk-dev-alb/67ed6ab2ef1a162a",
            "idle_timeout": 300,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "Fvrk-dev-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0b8a6bcbc4302994e"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0676b17d05babe69f"
              },
              {
                "subnet_id": "subnet-076ca5925fd436c79"
              },
              {
                "subnet_id": "subnet-0d4bb787f2a8e82d7"
              }
            ],
            "subnets": [
              "subnet-0676b17d05babe69f",
              "subnet-076ca5925fd436c79",
              "subnet-0d4bb787f2a8e82d7"
            ],
            "tags": {
              "Name": "Fvrk-dev-alb"
            },
            "tags_all": {
              "Name": "Fvrk-dev-alb"
            },
            "vpc_id": "vpc-01559cc551ee9ce1f",
            "xff_header_processing_mode": "append",
            "zone_id": "ZP97RAFLXTNZK"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "main_uat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:010438478476:loadbalancer/app/Fvrk-uat-alb/9f5068f897ca72b4",
            "arn_suffix": "app/Fvrk-uat-alb/9f5068f897ca72b4",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "Fvrk-uat-alb-1276156156.ap-south-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:ap-south-1:010438478476:loadbalancer/app/Fvrk-uat-alb/9f5068f897ca72b4",
            "idle_timeout": 300,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "Fvrk-uat-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-067df8f5840718d38"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0676b17d05babe69f"
              },
              {
                "subnet_id": "subnet-076ca5925fd436c79"
              },
              {
                "subnet_id": "subnet-0d4bb787f2a8e82d7"
              }
            ],
            "subnets": [
              "subnet-0676b17d05babe69f",
              "subnet-076ca5925fd436c79",
              "subnet-0d4bb787f2a8e82d7"
            ],
            "tags": {
              "Env": "uat",
              "Name": "fvrk-uat-alb"
            },
            "tags_all": {
              "Env": "uat",
              "Name": "fvrk-uat-alb"
            },
            "vpc_id": "vpc-01559cc551ee9ce1f",
            "xff_header_processing_mode": "append",
            "zone_id": "ZP97RAFLXTNZK"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb_sg_uat",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "nlb_rabbit",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:010438478476:loadbalancer/net/Fvrk-dev-nlb-front-door/fca2c7885497bd3f",
            "arn_suffix": "net/Fvrk-dev-nlb-front-door/fca2c7885497bd3f",
            "dns_name": "Fvrk-dev-nlb-front-door-fca2c7885497bd3f.elb.ap-south-1.amazonaws.com",
            "dns_record_client_routing_policy": "any_availability_zone",
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:ap-south-1:010438478476:loadbalancer/net/Fvrk-dev-nlb-front-door/fca2c7885497bd3f",
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "network",
            "name": "Fvrk-dev-nlb-front-door",
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0676b17d05babe69f"
              },
              {
                "subnet_id": "subnet-076ca5925fd436c79"
              },
              {
                "subnet_id": "subnet-0d4bb787f2a8e82d7"
              }
            ],
            "subnets": [
              "subnet-0676b17d05babe69f",
              "subnet-076ca5925fd436c79",
              "subnet-0d4bb787f2a8e82d7"
            ],
            "tags": {
              "Name": "Fvrk-dev-nlb-front-door"
            },
            "tags_all": {
              "Name": "Fvrk-dev-nlb-front-door"
            },
            "vpc_id": "vpc-01559cc551ee9ce1f",
            "zone_id": "ZVDDRBQ08TROA"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:010438478476:listener/app/Fvrk-dev-alb/67ed6ab2ef1a162a/085f778884fb313f",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "#{host}",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:010438478476:listener/app/Fvrk-dev-alb/67ed6ab2ef1a162a/085f778884fb313f",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-south-1:010438478476:loadbalancer/app/Fvrk-dev-alb/67ed6ab2ef1a162a",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_lb.main",
            "aws_security_group.alb_sg",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http_uat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:010438478476:listener/app/Fvrk-uat-alb/9f5068f897ca72b4/14ab896066f08b57",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "#{host}",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:010438478476:listener/app/Fvrk-uat-alb/9f5068f897ca72b4/14ab896066f08b57",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-south-1:010438478476:loadbalancer/app/Fvrk-uat-alb/9f5068f897ca72b4",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_lb.main_uat",
            "aws_security_group.alb_sg_uat",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:010438478476:listener/app/Fvrk-dev-alb/67ed6ab2ef1a162a/eeb313d174bdb2d6",
            "certificate_arn": "arn:aws:acm:ap-south-1:010438478476:certificate/027daaa8-4c47-41d3-ad8c-b7828d332752",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:010438478476:targetgroup/ip-tg-2026031920150663000000000b/ebc72cdca00943f8",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:010438478476:listener/app/Fvrk-dev-alb/67ed6ab2ef1a162a/eeb313d174bdb2d6",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-south-1:010438478476:loadbalancer/app/Fvrk-dev-alb/67ed6ab2ef1a162a",
            "mutual_authentication": [
              {
                "advertise_trust_store_ca_names": "",
                "ignore_client_certificate_expiry": false,
                "mode": "off",
                "trust_store_arn": ""
              }
            ],
            "port": 443,
            "protocol": "HTTPS",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": "",
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": "",
            "routing_http_request_x_amzn_tls_version_header_name": "",
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_lb.main",
            "aws_lb_target_group.main",
            "aws_security_group.alb_sg",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "data.aws_eks_cluster.cluster"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "https_uat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:010438478476:listener/app/Fvrk-uat-alb/9f5068f897ca72b4/b67ac321c98cc087",
            "certificate_arn": "arn:aws:acm:ap-south-1:010438478476:certificate/027daaa8-4c47-41d3-ad8c-b7828d332752",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:010438478476:targetgroup/k8s-fvrk-uat-tg/92e5fe6e967ce241",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:010438478476:listener/app/Fvrk-uat-alb/9f5068f897ca72b4/b67ac321c98cc087",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-south-1:010438478476:loadbalancer/app/Fvrk-uat-alb/9f5068f897ca72b4",
            "mutual_authentication": [
              {
                "advertise_trust_store_ca_names": "",
                "ignore_client_certificate_expiry": false,
                "mode": "off",
                "trust_store_arn": ""
              }
            ],
            "port": 443,
            "protocol": "HTTPS",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": "",
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": "",
            "routing_http_request_x_amzn_tls_version_header_name": "",
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_lb.main_uat",
            "aws_lb_target_group.main_uat",
            "aws_security_group.alb_sg_uat",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "data.aws_eks_cluster.cluster"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "nlb_https_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:010438478476:listener/net/Fvrk-dev-nlb-front-door/fca2c7885497bd3f/cccf7b18cb699955",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:010438478476:targetgroup/nlb-to-alb-bridge/10a8764692528099",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:010438478476:listener/net/Fvrk-dev-nlb-front-door/fca2c7885497bd3f/cccf7b18cb699955",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-south-1:010438478476:loadbalancer/net/Fvrk-dev-nlb-front-door/fca2c7885497bd3f",
            "mutual_authentication": [],
            "port": 443,
            "protocol": "TCP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": null,
            "routing_http_response_access_control_allow_headers_header_value": null,
            "routing_http_response_access_control_allow_methods_header_value": null,
            "routing_http_response_access_control_allow_origin_header_value": null,
            "routing_http_response_access_control_expose_headers_header_value": null,
            "routing_http_response_access_control_max_age_header_value": null,
            "routing_http_response_content_security_policy_header_value": null,
            "routing_http_response_server_enabled": null,
            "routing_http_response_strict_transport_security_header_value": null,
            "routing_http_response_x_content_type_options_header_value": null,
            "routing_http_response_x_frame_options_header_value": null,
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": 350,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_lb.nlb_rabbit",
            "aws_lb_target_group.alb_bridge",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "data.aws_eks_cluster.cluster"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "rabbit_messaging_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:010438478476:listener/net/Fvrk-dev-nlb-front-door/fca2c7885497bd3f/77a37cb74e783c79",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:010438478476:targetgroup/k8s-rabbit-mq-messaging/bd5508037167e194",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:010438478476:listener/net/Fvrk-dev-nlb-front-door/fca2c7885497bd3f/77a37cb74e783c79",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-south-1:010438478476:loadbalancer/net/Fvrk-dev-nlb-front-door/fca2c7885497bd3f",
            "mutual_authentication": [],
            "port": 5672,
            "protocol": "TCP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": null,
            "routing_http_response_access_control_allow_headers_header_value": null,
            "routing_http_response_access_control_allow_methods_header_value": null,
            "routing_http_response_access_control_allow_origin_header_value": null,
            "routing_http_response_access_control_expose_headers_header_value": null,
            "routing_http_response_access_control_max_age_header_value": null,
            "routing_http_response_content_security_policy_header_value": null,
            "routing_http_response_server_enabled": null,
            "routing_http_response_strict_transport_security_header_value": null,
            "routing_http_response_x_content_type_options_header_value": null,
            "routing_http_response_x_frame_options_header_value": null,
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": 350,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_lb.nlb_rabbit",
            "aws_lb_target_group.rabbit_messaging",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "data.aws_eks_cluster.cluster"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "rule_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:010438478476:targetgroup/ip-tg-2026031920150605220000000a/452a2ae3e038251b",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:010438478476:listener-rule/app/Fvrk-dev-alb/67ed6ab2ef1a162a/eeb313d174bdb2d6/03492a8af61aad9f",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/api/document-embedding-classification/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:010438478476:listener-rule/app/Fvrk-dev-alb/67ed6ab2ef1a162a/eeb313d174bdb2d6/03492a8af61aad9f",
            "listener_arn": "arn:aws:elasticloadbalancing:ap-south-1:010438478476:listener/app/Fvrk-dev-alb/67ed6ab2ef1a162a/eeb313d174bdb2d6",
            "priority": 1,
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_lb.main",
            "aws_lb_listener.https",
            "aws_lb_target_group.main",
            "aws_security_group.alb_sg",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "data.aws_eks_cluster.cluster"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "rule_10",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:010438478476:targetgroup/ip-tg-20260319201506049800000001/f5e1e1c7270c4ebe",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:010438478476:listener-rule/app/Fvrk-dev-alb/67ed6ab2ef1a162a/eeb313d174bdb2d6/dac1bc0d14051128",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/api/document-text-extraction/*",
                      "/api/framev3/document-text-extraction/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:010438478476:listener-rule/app/Fvrk-dev-alb/67ed6ab2ef1a162a/eeb313d174bdb2d6/dac1bc0d14051128",
            "listener_arn": "arn:aws:elasticloadbalancing:ap-south-1:010438478476:listener/app/Fvrk-dev-alb/67ed6ab2ef1a162a/eeb313d174bdb2d6",
            "priority": 10,
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_lb.main",
            "aws_lb_listener.https",
            "aws_lb_target_group.main",
            "aws_security_group.alb_sg",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "data.aws_eks_cluster.cluster"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "rule_11",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:010438478476:targetgroup/ip-tg-20260319201506050500000006/76e8ec0ca764bd60",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:010438478476:listener-rule/app/Fvrk-dev-alb/67ed6ab2ef1a162a/eeb313d174bdb2d6/ad7a0a95a12b6424",
            "condition": [
              {
                "host_header": [
                  {
                    "values": [
                      "sit-gateway.aithondev.com"
                    ]
                  }
                ],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:010438478476:listener-rule/app/Fvrk-dev-alb/67ed6ab2ef1a162a/eeb313d174bdb2d6/ad7a0a95a12b6424",
            "listener_arn": "arn:aws:elasticloadbalancing:ap-south-1:010438478476:listener/app/Fvrk-dev-alb/67ed6ab2ef1a162a/eeb313d174bdb2d6",
            "priority": 11,
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_lb.main",
            "aws_lb_listener.https",
            "aws_lb_target_group.main",
            "aws_security_group.alb_sg",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "data.aws_eks_cluster.cluster"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "rule_12",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:010438478476:targetgroup/ip-tg-20260319201506051800000007/b17ce2621b62967c",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:010438478476:listener-rule/app/Fvrk-dev-alb/67ed6ab2ef1a162a/eeb313d174bdb2d6/ce5e5d81a4b0643f",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/api/frame/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:010438478476:listener-rule/app/Fvrk-dev-alb/67ed6ab2ef1a162a/eeb313d174bdb2d6/ce5e5d81a4b0643f",
            "listener_arn": "arn:aws:elasticloadbalancing:ap-south-1:010438478476:listener/app/Fvrk-dev-alb/67ed6ab2ef1a162a/eeb313d174bdb2d6",
            "priority": 12,
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_lb.main",
            "aws_lb_listener.https",
            "aws_lb_target_group.main",
            "aws_security_group.alb_sg",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "data.aws_eks_cluster.cluster"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "rule_13",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:010438478476:targetgroup/ip-tg-20260319201506050400000004/7236b3f31449f718",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:010438478476:listener-rule/app/Fvrk-dev-alb/67ed6ab2ef1a162a/eeb313d174bdb2d6/2be70f9c4842ffd2",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/api/common/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:010438478476:listener-rule/app/Fvrk-dev-alb/67ed6ab2ef1a162a/eeb313d174bdb2d6/2be70f9c4842ffd2",
            "listener_arn": "arn:aws:elasticloadbalancing:ap-south-1:010438478476:listener/app/Fvrk-dev-alb/67ed6ab2ef1a162a/eeb313d174bdb2d6",
            "priority": 13,
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_lb.main",
            "aws_lb_listener.https",
            "aws_lb_target_group.main",
            "aws_security_group.alb_sg",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "data.aws_eks_cluster.cluster"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "rule_15",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:010438478476:targetgroup/ip-tg-2026031920150672570000000f/60aa7b77a6ba7856",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:010438478476:listener-rule/app/Fvrk-dev-alb/67ed6ab2ef1a162a/eeb313d174bdb2d6/26981e9926c909a1",
            "condition": [
              {
                "host_header": [
                  {
                    "values": [
                      "airflow.aithondev.com"
                    ]
                  }
                ],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:010438478476:listener-rule/app/Fvrk-dev-alb/67ed6ab2ef1a162a/eeb313d174bdb2d6/26981e9926c909a1",
            "listener_arn": "arn:aws:elasticloadbalancing:ap-south-1:010438478476:listener/app/Fvrk-dev-alb/67ed6ab2ef1a162a/eeb313d174bdb2d6",
            "priority": 15,
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_lb.main",
            "aws_lb_listener.https",
            "aws_lb_target_group.main",
            "aws_security_group.alb_sg",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "data.aws_eks_cluster.cluster"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "rule_16",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:010438478476:targetgroup/ip-tg-20260319201506051800000008/3174b272cba8f6f4",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:010438478476:listener-rule/app/Fvrk-dev-alb/67ed6ab2ef1a162a/eeb313d174bdb2d6/a744948f2be2dbb1",
            "condition": [
              {
                "host_header": [
                  {
                    "values": [
                      "etl-dev.aithondev.com"
                    ]
                  }
                ],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:010438478476:listener-rule/app/Fvrk-dev-alb/67ed6ab2ef1a162a/eeb313d174bdb2d6/a744948f2be2dbb1",
            "listener_arn": "arn:aws:elasticloadbalancing:ap-south-1:010438478476:listener/app/Fvrk-dev-alb/67ed6ab2ef1a162a/eeb313d174bdb2d6",
            "priority": 16,
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_lb.main",
            "aws_lb_listener.https",
            "aws_lb_target_group.main",
            "aws_security_group.alb_sg",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "data.aws_eks_cluster.cluster"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "rule_17",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:010438478476:targetgroup/ip-tg-20260319201506861200000013/e615ae5a6239c596",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:010438478476:listener-rule/app/Fvrk-dev-alb/67ed6ab2ef1a162a/eeb313d174bdb2d6/40374813732c5ed6",
            "condition": [
              {
                "host_header": [
                  {
                    "values": [
                      "monitoring.aithondev.com"
                    ]
                  }
                ],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:010438478476:listener-rule/app/Fvrk-dev-alb/67ed6ab2ef1a162a/eeb313d174bdb2d6/40374813732c5ed6",
            "listener_arn": "arn:aws:elasticloadbalancing:ap-south-1:010438478476:listener/app/Fvrk-dev-alb/67ed6ab2ef1a162a/eeb313d174bdb2d6",
            "priority": 17,
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_lb.main",
            "aws_lb_listener.https",
            "aws_lb_target_group.main",
            "aws_security_group.alb_sg",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "data.aws_eks_cluster.cluster"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "rule_18",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:010438478476:targetgroup/ip-tg-2026031920150670900000000e/dcdd824815bca68f",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:010438478476:listener-rule/app/Fvrk-dev-alb/67ed6ab2ef1a162a/eeb313d174bdb2d6/c4289514fe4651d0",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/api/scheduler/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:010438478476:listener-rule/app/Fvrk-dev-alb/67ed6ab2ef1a162a/eeb313d174bdb2d6/c4289514fe4651d0",
            "listener_arn": "arn:aws:elasticloadbalancing:ap-south-1:010438478476:listener/app/Fvrk-dev-alb/67ed6ab2ef1a162a/eeb313d174bdb2d6",
            "priority": 18,
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_lb.main",
            "aws_lb_listener.https",
            "aws_lb_target_group.main",
            "aws_security_group.alb_sg",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "data.aws_eks_cluster.cluster"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "rule_19",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:010438478476:targetgroup/ip-tg-20260319201506051800000008/3174b272cba8f6f4",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:010438478476:listener-rule/app/Fvrk-dev-alb/67ed6ab2ef1a162a/eeb313d174bdb2d6/a531f489acd6f74b",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/api/etl/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:010438478476:listener-rule/app/Fvrk-dev-alb/67ed6ab2ef1a162a/eeb313d174bdb2d6/a531f489acd6f74b",
            "listener_arn": "arn:aws:elasticloadbalancing:ap-south-1:010438478476:listener/app/Fvrk-dev-alb/67ed6ab2ef1a162a/eeb313d174bdb2d6",
            "priority": 19,
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_lb.main",
            "aws_lb_listener.https",
            "aws_lb_target_group.main",
            "aws_security_group.alb_sg",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "data.aws_eks_cluster.cluster"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "rule_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:010438478476:targetgroup/ip-tg-20260319201506050200000002/4d71efabcc31052c",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:010438478476:listener-rule/app/Fvrk-dev-alb/67ed6ab2ef1a162a/eeb313d174bdb2d6/1b8370afb3ce74f3",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/api/validus/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:010438478476:listener-rule/app/Fvrk-dev-alb/67ed6ab2ef1a162a/eeb313d174bdb2d6/1b8370afb3ce74f3",
            "listener_arn": "arn:aws:elasticloadbalancing:ap-south-1:010438478476:listener/app/Fvrk-dev-alb/67ed6ab2ef1a162a/eeb313d174bdb2d6",
            "priority": 2,
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_lb.main",
            "aws_lb_listener.https",
            "aws_lb_target_group.main",
            "aws_security_group.alb_sg",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "data.aws_eks_cluster.cluster"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "rule_3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:010438478476:targetgroup/ip-tg-2026031920150667490000000c/4be4172dda5acc44",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:010438478476:listener-rule/app/Fvrk-dev-alb/67ed6ab2ef1a162a/eeb313d174bdb2d6/c175ec3a703b26a4",
            "condition": [
              {
                "host_header": [
                  {
                    "values": [
                      "jenkins.aithondev.com"
                    ]
                  }
                ],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:010438478476:listener-rule/app/Fvrk-dev-alb/67ed6ab2ef1a162a/eeb313d174bdb2d6/c175ec3a703b26a4",
            "listener_arn": "arn:aws:elasticloadbalancing:ap-south-1:010438478476:listener/app/Fvrk-dev-alb/67ed6ab2ef1a162a/eeb313d174bdb2d6",
            "priority": 3,
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_lb.main",
            "aws_lb_listener.https",
            "aws_lb_target_group.main",
            "aws_security_group.alb_sg",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "data.aws_eks_cluster.cluster"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "rule_4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:010438478476:targetgroup/ip-tg-2026031920150667490000000d/a512a5d8a1a25a1b",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:010438478476:listener-rule/app/Fvrk-dev-alb/67ed6ab2ef1a162a/eeb313d174bdb2d6/cd0649014672364d",
            "condition": [
              {
                "host_header": [
                  {
                    "values": [
                      "argocd.aithondev.com"
                    ]
                  }
                ],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:010438478476:listener-rule/app/Fvrk-dev-alb/67ed6ab2ef1a162a/eeb313d174bdb2d6/cd0649014672364d",
            "listener_arn": "arn:aws:elasticloadbalancing:ap-south-1:010438478476:listener/app/Fvrk-dev-alb/67ed6ab2ef1a162a/eeb313d174bdb2d6",
            "priority": 4,
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_lb.main",
            "aws_lb_listener.https",
            "aws_lb_target_group.main",
            "aws_security_group.alb_sg",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "data.aws_eks_cluster.cluster"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "rule_5",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:010438478476:targetgroup/ip-tg-20260319201506728200000012/d8926b24adecafcf",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:010438478476:listener-rule/app/Fvrk-dev-alb/67ed6ab2ef1a162a/eeb313d174bdb2d6/ee47dc865bcd4d17",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/api/page-classification/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:010438478476:listener-rule/app/Fvrk-dev-alb/67ed6ab2ef1a162a/eeb313d174bdb2d6/ee47dc865bcd4d17",
            "listener_arn": "arn:aws:elasticloadbalancing:ap-south-1:010438478476:listener/app/Fvrk-dev-alb/67ed6ab2ef1a162a/eeb313d174bdb2d6",
            "priority": 5,
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_lb.main",
            "aws_lb_listener.https",
            "aws_lb_target_group.main",
            "aws_security_group.alb_sg",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "data.aws_eks_cluster.cluster"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "rule_6",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:010438478476:targetgroup/ip-tg-20260319201506050300000003/3fcde3ba9ccf5036",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:010438478476:listener-rule/app/Fvrk-dev-alb/67ed6ab2ef1a162a/eeb313d174bdb2d6/572e1bc9618cbc57",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/api/field-extraction/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:010438478476:listener-rule/app/Fvrk-dev-alb/67ed6ab2ef1a162a/eeb313d174bdb2d6/572e1bc9618cbc57",
            "listener_arn": "arn:aws:elasticloadbalancing:ap-south-1:010438478476:listener/app/Fvrk-dev-alb/67ed6ab2ef1a162a/eeb313d174bdb2d6",
            "priority": 6,
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_lb.main",
            "aws_lb_listener.https",
            "aws_lb_target_group.main",
            "aws_security_group.alb_sg",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "data.aws_eks_cluster.cluster"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "rule_7",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:010438478476:targetgroup/ip-tg-20260319201506728100000011/8f9713ec9b3cd878",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:010438478476:listener-rule/app/Fvrk-dev-alb/67ed6ab2ef1a162a/eeb313d174bdb2d6/46b75a73645eff5f",
            "condition": [
              {
                "host_header": [
                  {
                    "values": [
                      "konga.aithondev.com"
                    ]
                  }
                ],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:010438478476:listener-rule/app/Fvrk-dev-alb/67ed6ab2ef1a162a/eeb313d174bdb2d6/46b75a73645eff5f",
            "listener_arn": "arn:aws:elasticloadbalancing:ap-south-1:010438478476:listener/app/Fvrk-dev-alb/67ed6ab2ef1a162a/eeb313d174bdb2d6",
            "priority": 7,
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_lb.main",
            "aws_lb_listener.https",
            "aws_lb_target_group.main",
            "aws_security_group.alb_sg",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "data.aws_eks_cluster.cluster"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "rule_8",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:010438478476:targetgroup/ip-tg-20260319201506727900000010/57fd6711eb9502e9",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:010438478476:listener-rule/app/Fvrk-dev-alb/67ed6ab2ef1a162a/eeb313d174bdb2d6/7d6d3dfe306de522",
            "condition": [
              {
                "host_header": [
                  {
                    "values": [
                      "keycloak.aithondev.com"
                    ]
                  }
                ],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:010438478476:listener-rule/app/Fvrk-dev-alb/67ed6ab2ef1a162a/eeb313d174bdb2d6/7d6d3dfe306de522",
            "listener_arn": "arn:aws:elasticloadbalancing:ap-south-1:010438478476:listener/app/Fvrk-dev-alb/67ed6ab2ef1a162a/eeb313d174bdb2d6",
            "priority": 8,
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_lb.main",
            "aws_lb_listener.https",
            "aws_lb_target_group.main",
            "aws_security_group.alb_sg",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "data.aws_eks_cluster.cluster"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "rule_9",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:010438478476:targetgroup/ip-tg-20260319201506052100000009/b3028bd68c5d34ed",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:010438478476:listener-rule/app/Fvrk-dev-alb/67ed6ab2ef1a162a/eeb313d174bdb2d6/d4a40714823811c3",
            "condition": [
              {
                "host_header": [
                  {
                    "values": [
                      "rabbitmq.aithondev.com"
                    ]
                  }
                ],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:010438478476:listener-rule/app/Fvrk-dev-alb/67ed6ab2ef1a162a/eeb313d174bdb2d6/d4a40714823811c3",
            "listener_arn": "arn:aws:elasticloadbalancing:ap-south-1:010438478476:listener/app/Fvrk-dev-alb/67ed6ab2ef1a162a/eeb313d174bdb2d6",
            "priority": 9,
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_lb.main",
            "aws_lb_listener.https",
            "aws_lb_target_group.main",
            "aws_security_group.alb_sg",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "data.aws_eks_cluster.cluster"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "uat_rule_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:010438478476:targetgroup/k8s-doc-classification-uat/c3b699822ea398c6",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:010438478476:listener-rule/app/Fvrk-uat-alb/9f5068f897ca72b4/b67ac321c98cc087/af58a4532637f70a",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/api/document-embedding-classification/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:010438478476:listener-rule/app/Fvrk-uat-alb/9f5068f897ca72b4/b67ac321c98cc087/af58a4532637f70a",
            "listener_arn": "arn:aws:elasticloadbalancing:ap-south-1:010438478476:listener/app/Fvrk-uat-alb/9f5068f897ca72b4/b67ac321c98cc087",
            "priority": 1,
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_lb.main_uat",
            "aws_lb_listener.https_uat",
            "aws_lb_target_group.main_uat",
            "aws_security_group.alb_sg_uat",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "data.aws_eks_cluster.cluster"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "uat_rule_10",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:010438478476:targetgroup/k8s-airflow-uat/2a0d9520d0a738ec",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:010438478476:listener-rule/app/Fvrk-uat-alb/9f5068f897ca72b4/b67ac321c98cc087/341683d4baec00ba",
            "condition": [
              {
                "host_header": [
                  {
                    "values": [
                      "airflow-uat.aithondev.com"
                    ]
                  }
                ],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:010438478476:listener-rule/app/Fvrk-uat-alb/9f5068f897ca72b4/b67ac321c98cc087/341683d4baec00ba",
            "listener_arn": "arn:aws:elasticloadbalancing:ap-south-1:010438478476:listener/app/Fvrk-uat-alb/9f5068f897ca72b4/b67ac321c98cc087",
            "priority": 10,
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_lb.main_uat",
            "aws_lb_listener.https_uat",
            "aws_lb_target_group.main_uat",
            "aws_security_group.alb_sg_uat",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "data.aws_eks_cluster.cluster"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "uat_rule_11",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:010438478476:targetgroup/k8s-keycloak-uat/2e8921d87decc77a",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:010438478476:listener-rule/app/Fvrk-uat-alb/9f5068f897ca72b4/b67ac321c98cc087/7aa231d110f6edbc",
            "condition": [
              {
                "host_header": [
                  {
                    "values": [
                      "keycloak-uat.aithondev.com"
                    ]
                  }
                ],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:010438478476:listener-rule/app/Fvrk-uat-alb/9f5068f897ca72b4/b67ac321c98cc087/7aa231d110f6edbc",
            "listener_arn": "arn:aws:elasticloadbalancing:ap-south-1:010438478476:listener/app/Fvrk-uat-alb/9f5068f897ca72b4/b67ac321c98cc087",
            "priority": 11,
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_lb.main_uat",
            "aws_lb_listener.https_uat",
            "aws_lb_target_group.main_uat",
            "aws_security_group.alb_sg_uat",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "data.aws_eks_cluster.cluster"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "uat_rule_12",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:010438478476:targetgroup/k8s-konga-uat/e952c1bf4ce94964",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:010438478476:listener-rule/app/Fvrk-uat-alb/9f5068f897ca72b4/b67ac321c98cc087/977181abbef94f2d",
            "condition": [
              {
                "host_header": [
                  {
                    "values": [
                      "konga-uat.aithondev.com"
                    ]
                  }
                ],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:010438478476:listener-rule/app/Fvrk-uat-alb/9f5068f897ca72b4/b67ac321c98cc087/977181abbef94f2d",
            "listener_arn": "arn:aws:elasticloadbalancing:ap-south-1:010438478476:listener/app/Fvrk-uat-alb/9f5068f897ca72b4/b67ac321c98cc087",
            "priority": 12,
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_lb.main_uat",
            "aws_lb_listener.https_uat",
            "aws_lb_target_group.main_uat",
            "aws_security_group.alb_sg_uat",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "data.aws_eks_cluster.cluster"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "uat_rule_13",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:010438478476:targetgroup/k8s-etl-uat/3dddadaebb494c21",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:010438478476:listener-rule/app/Fvrk-uat-alb/9f5068f897ca72b4/b67ac321c98cc087/9d9abcdc80dcb3ce",
            "condition": [
              {
                "host_header": [
                  {
                    "values": [
                      "etl-uat.aithondev.com"
                    ]
                  }
                ],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:010438478476:listener-rule/app/Fvrk-uat-alb/9f5068f897ca72b4/b67ac321c98cc087/9d9abcdc80dcb3ce",
            "listener_arn": "arn:aws:elasticloadbalancing:ap-south-1:010438478476:listener/app/Fvrk-uat-alb/9f5068f897ca72b4/b67ac321c98cc087",
            "priority": 13,
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_lb.main_uat",
            "aws_lb_listener.https_uat",
            "aws_lb_target_group.main_uat",
            "aws_security_group.alb_sg_uat",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "data.aws_eks_cluster.cluster"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "uat_rule_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:010438478476:targetgroup/k8s-validus-uat/c2a38f7cbe3a388a",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:010438478476:listener-rule/app/Fvrk-uat-alb/9f5068f897ca72b4/b67ac321c98cc087/be8028532e634ee7",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/api/validus/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:010438478476:listener-rule/app/Fvrk-uat-alb/9f5068f897ca72b4/b67ac321c98cc087/be8028532e634ee7",
            "listener_arn": "arn:aws:elasticloadbalancing:ap-south-1:010438478476:listener/app/Fvrk-uat-alb/9f5068f897ca72b4/b67ac321c98cc087",
            "priority": 2,
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_lb.main_uat",
            "aws_lb_listener.https_uat",
            "aws_lb_target_group.main_uat",
            "aws_security_group.alb_sg_uat",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "data.aws_eks_cluster.cluster"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "uat_rule_3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:010438478476:targetgroup/k8s-doc-page-classification-uat/ee93c6da24a1a2cb",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:010438478476:listener-rule/app/Fvrk-uat-alb/9f5068f897ca72b4/b67ac321c98cc087/fd90f5a365442940",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/api/page-classification/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:010438478476:listener-rule/app/Fvrk-uat-alb/9f5068f897ca72b4/b67ac321c98cc087/fd90f5a365442940",
            "listener_arn": "arn:aws:elasticloadbalancing:ap-south-1:010438478476:listener/app/Fvrk-uat-alb/9f5068f897ca72b4/b67ac321c98cc087",
            "priority": 3,
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_lb.main_uat",
            "aws_lb_listener.https_uat",
            "aws_lb_target_group.main_uat",
            "aws_security_group.alb_sg_uat",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "data.aws_eks_cluster.cluster"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "uat_rule_4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:010438478476:targetgroup/k8s-doc-field-extraction-uat/552b1960951454f8",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:010438478476:listener-rule/app/Fvrk-uat-alb/9f5068f897ca72b4/b67ac321c98cc087/1d8e208e88bb5872",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/api/field-extraction/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:010438478476:listener-rule/app/Fvrk-uat-alb/9f5068f897ca72b4/b67ac321c98cc087/1d8e208e88bb5872",
            "listener_arn": "arn:aws:elasticloadbalancing:ap-south-1:010438478476:listener/app/Fvrk-uat-alb/9f5068f897ca72b4/b67ac321c98cc087",
            "priority": 4,
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_lb.main_uat",
            "aws_lb_listener.https_uat",
            "aws_lb_target_group.main_uat",
            "aws_security_group.alb_sg_uat",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "data.aws_eks_cluster.cluster"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "uat_rule_5",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:010438478476:targetgroup/k8s-text-extraction-uat/ee8ad23d6f96fe36",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:010438478476:listener-rule/app/Fvrk-uat-alb/9f5068f897ca72b4/b67ac321c98cc087/a37ea7467f925414",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/api/framev3/document-text-extraction/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:010438478476:listener-rule/app/Fvrk-uat-alb/9f5068f897ca72b4/b67ac321c98cc087/a37ea7467f925414",
            "listener_arn": "arn:aws:elasticloadbalancing:ap-south-1:010438478476:listener/app/Fvrk-uat-alb/9f5068f897ca72b4/b67ac321c98cc087",
            "priority": 5,
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_lb.main_uat",
            "aws_lb_listener.https_uat",
            "aws_lb_target_group.main_uat",
            "aws_security_group.alb_sg_uat",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "data.aws_eks_cluster.cluster"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "uat_rule_6",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:010438478476:targetgroup/k8s-frame-uat/d62638844752ae9d",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:010438478476:listener-rule/app/Fvrk-uat-alb/9f5068f897ca72b4/b67ac321c98cc087/e3640c0ff71a2e42",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/api/frame/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:010438478476:listener-rule/app/Fvrk-uat-alb/9f5068f897ca72b4/b67ac321c98cc087/e3640c0ff71a2e42",
            "listener_arn": "arn:aws:elasticloadbalancing:ap-south-1:010438478476:listener/app/Fvrk-uat-alb/9f5068f897ca72b4/b67ac321c98cc087",
            "priority": 6,
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_lb.main_uat",
            "aws_lb_listener.https_uat",
            "aws_lb_target_group.main_uat",
            "aws_security_group.alb_sg_uat",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "data.aws_eks_cluster.cluster"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "uat_rule_7",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:010438478476:targetgroup/k8s-common-service-uat/5e966d25abdb5f1f",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:010438478476:listener-rule/app/Fvrk-uat-alb/9f5068f897ca72b4/b67ac321c98cc087/2130f9fe2811ae0f",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/api/common/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:010438478476:listener-rule/app/Fvrk-uat-alb/9f5068f897ca72b4/b67ac321c98cc087/2130f9fe2811ae0f",
            "listener_arn": "arn:aws:elasticloadbalancing:ap-south-1:010438478476:listener/app/Fvrk-uat-alb/9f5068f897ca72b4/b67ac321c98cc087",
            "priority": 7,
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_lb.main_uat",
            "aws_lb_listener.https_uat",
            "aws_lb_target_group.main_uat",
            "aws_security_group.alb_sg_uat",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "data.aws_eks_cluster.cluster"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "uat_rule_8",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:010438478476:targetgroup/k8s-kong-gateway-uat/2d0789b497586ccc",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:010438478476:listener-rule/app/Fvrk-uat-alb/9f5068f897ca72b4/b67ac321c98cc087/43969c9be9f0a242",
            "condition": [
              {
                "host_header": [
                  {
                    "values": [
                      "uat-gateway.aithondev.com"
                    ]
                  }
                ],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:010438478476:listener-rule/app/Fvrk-uat-alb/9f5068f897ca72b4/b67ac321c98cc087/43969c9be9f0a242",
            "listener_arn": "arn:aws:elasticloadbalancing:ap-south-1:010438478476:listener/app/Fvrk-uat-alb/9f5068f897ca72b4/b67ac321c98cc087",
            "priority": 8,
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_lb.main_uat",
            "aws_lb_listener.https_uat",
            "aws_lb_target_group.main_uat",
            "aws_security_group.alb_sg_uat",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "data.aws_eks_cluster.cluster"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "uat_rule_9",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:010438478476:targetgroup/k8s-rabbitmq-uat/029c6e3b456e5bc9",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:010438478476:listener-rule/app/Fvrk-uat-alb/9f5068f897ca72b4/b67ac321c98cc087/b1b35ed1177a75ae",
            "condition": [
              {
                "host_header": [
                  {
                    "values": [
                      "rabbitmq-uat.aithondev.com"
                    ]
                  }
                ],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:010438478476:listener-rule/app/Fvrk-uat-alb/9f5068f897ca72b4/b67ac321c98cc087/b1b35ed1177a75ae",
            "listener_arn": "arn:aws:elasticloadbalancing:ap-south-1:010438478476:listener/app/Fvrk-uat-alb/9f5068f897ca72b4/b67ac321c98cc087",
            "priority": 9,
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_lb.main_uat",
            "aws_lb_listener.https_uat",
            "aws_lb_target_group.main_uat",
            "aws_security_group.alb_sg_uat",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "data.aws_eks_cluster.cluster"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "alb_bridge",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:010438478476:targetgroup/nlb-to-alb-bridge/10a8764692528099",
            "arn_suffix": "targetgroup/nlb-to-alb-bridge/10a8764692528099",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200-499",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTPS",
                "timeout": 10,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:010438478476:targetgroup/nlb-to-alb-bridge/10a8764692528099",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:ap-south-1:010438478476:loadbalancer/net/Fvrk-dev-nlb-front-door/fca2c7885497bd3f"
            ],
            "name": "nlb-to-alb-bridge",
            "port": 443,
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 0,
                "enabled": false,
                "type": "source_ip"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "alb",
            "vpc_id": "vpc-01559cc551ee9ce1f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_eks_cluster.cluster"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "airflow",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:010438478476:targetgroup/ip-tg-2026031920150672570000000f/60aa7b77a6ba7856",
            "arn_suffix": "targetgroup/ip-tg-2026031920150672570000000f/60aa7b77a6ba7856",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200-499",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:010438478476:targetgroup/ip-tg-2026031920150672570000000f/60aa7b77a6ba7856",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:ap-south-1:010438478476:loadbalancer/app/Fvrk-dev-alb/67ed6ab2ef1a162a"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "ip-tg-2026031920150672570000000f",
            "name_prefix": "ip-tg-",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "App": "airflow",
              "ManagedBy": "Terraform"
            },
            "tags_all": {
              "App": "airflow",
              "ManagedBy": "Terraform"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-01559cc551ee9ce1f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_eks_cluster.cluster"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "argocd",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:010438478476:targetgroup/ip-tg-2026031920150667490000000d/a512a5d8a1a25a1b",
            "arn_suffix": "targetgroup/ip-tg-2026031920150667490000000d/a512a5d8a1a25a1b",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200-499",
                "path": "/healthz",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:010438478476:targetgroup/ip-tg-2026031920150667490000000d/a512a5d8a1a25a1b",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:ap-south-1:010438478476:loadbalancer/app/Fvrk-dev-alb/67ed6ab2ef1a162a"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "ip-tg-2026031920150667490000000d",
            "name_prefix": "ip-tg-",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "App": "argocd",
              "ManagedBy": "Terraform"
            },
            "tags_all": {
              "App": "argocd",
              "ManagedBy": "Terraform"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-01559cc551ee9ce1f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_eks_cluster.cluster"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "common-service",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:010438478476:targetgroup/ip-tg-20260319201506050400000004/7236b3f31449f718",
            "arn_suffix": "targetgroup/ip-tg-20260319201506050400000004/7236b3f31449f718",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200-499",
                "path": "/api/common/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:010438478476:targetgroup/ip-tg-20260319201506050400000004/7236b3f31449f718",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:ap-south-1:010438478476:loadbalancer/app/Fvrk-dev-alb/67ed6ab2ef1a162a"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "ip-tg-20260319201506050400000004",
            "name_prefix": "ip-tg-",
            "port": 8000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "App": "common-service",
              "ManagedBy": "Terraform"
            },
            "tags_all": {
              "App": "common-service",
              "ManagedBy": "Terraform"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-01559cc551ee9ce1f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_eks_cluster.cluster"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "document-classification",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:010438478476:targetgroup/ip-tg-2026031920150605220000000a/452a2ae3e038251b",
            "arn_suffix": "targetgroup/ip-tg-2026031920150605220000000a/452a2ae3e038251b",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200-499",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:010438478476:targetgroup/ip-tg-2026031920150605220000000a/452a2ae3e038251b",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:ap-south-1:010438478476:loadbalancer/app/Fvrk-dev-alb/67ed6ab2ef1a162a"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "ip-tg-2026031920150605220000000a",
            "name_prefix": "ip-tg-",
            "port": 8006,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "App": "document-classification",
              "ManagedBy": "Terraform"
            },
            "tags_all": {
              "App": "document-classification",
              "ManagedBy": "Terraform"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-01559cc551ee9ce1f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_eks_cluster.cluster"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "document-field-extraction",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:010438478476:targetgroup/ip-tg-20260319201506050300000003/3fcde3ba9ccf5036",
            "arn_suffix": "targetgroup/ip-tg-20260319201506050300000003/3fcde3ba9ccf5036",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200-499",
                "path": "/api/field-extraction/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:010438478476:targetgroup/ip-tg-20260319201506050300000003/3fcde3ba9ccf5036",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:ap-south-1:010438478476:loadbalancer/app/Fvrk-dev-alb/67ed6ab2ef1a162a"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "ip-tg-20260319201506050300000003",
            "name_prefix": "ip-tg-",
            "port": 8004,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "App": "document-field-extraction",
              "ManagedBy": "Terraform"
            },
            "tags_all": {
              "App": "document-field-extraction",
              "ManagedBy": "Terraform"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-01559cc551ee9ce1f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_eks_cluster.cluster"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "document-page-classification",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:010438478476:targetgroup/ip-tg-20260319201506728200000012/d8926b24adecafcf",
            "arn_suffix": "targetgroup/ip-tg-20260319201506728200000012/d8926b24adecafcf",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200-499",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:010438478476:targetgroup/ip-tg-20260319201506728200000012/d8926b24adecafcf",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:ap-south-1:010438478476:loadbalancer/app/Fvrk-dev-alb/67ed6ab2ef1a162a"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "ip-tg-20260319201506728200000012",
            "name_prefix": "ip-tg-",
            "port": 8003,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "App": "document-page-classification",
              "ManagedBy": "Terraform"
            },
            "tags_all": {
              "App": "document-page-classification",
              "ManagedBy": "Terraform"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-01559cc551ee9ce1f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_eks_cluster.cluster"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "etl-dev",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:010438478476:targetgroup/ip-tg-20260319201506051800000008/3174b272cba8f6f4",
            "arn_suffix": "targetgroup/ip-tg-20260319201506051800000008/3174b272cba8f6f4",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200-499",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:010438478476:targetgroup/ip-tg-20260319201506051800000008/3174b272cba8f6f4",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:ap-south-1:010438478476:loadbalancer/app/Fvrk-dev-alb/67ed6ab2ef1a162a"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "ip-tg-20260319201506051800000008",
            "name_prefix": "ip-tg-",
            "port": 5000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "App": "etl-dev",
              "ManagedBy": "Terraform"
            },
            "tags_all": {
              "App": "etl-dev",
              "ManagedBy": "Terraform"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-01559cc551ee9ce1f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_eks_cluster.cluster"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "frame",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:010438478476:targetgroup/ip-tg-20260319201506051800000007/b17ce2621b62967c",
            "arn_suffix": "targetgroup/ip-tg-20260319201506051800000007/b17ce2621b62967c",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200-499",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:010438478476:targetgroup/ip-tg-20260319201506051800000007/b17ce2621b62967c",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:ap-south-1:010438478476:loadbalancer/app/Fvrk-dev-alb/67ed6ab2ef1a162a"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "ip-tg-20260319201506051800000007",
            "name_prefix": "ip-tg-",
            "port": 8040,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "App": "frame",
              "ManagedBy": "Terraform"
            },
            "tags_all": {
              "App": "frame",
              "ManagedBy": "Terraform"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-01559cc551ee9ce1f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_eks_cluster.cluster"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "fvrk-dev-tg",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:010438478476:targetgroup/ip-tg-2026031920150663000000000b/ebc72cdca00943f8",
            "arn_suffix": "targetgroup/ip-tg-2026031920150663000000000b/ebc72cdca00943f8",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200-499",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:010438478476:targetgroup/ip-tg-2026031920150663000000000b/ebc72cdca00943f8",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:ap-south-1:010438478476:loadbalancer/app/Fvrk-dev-alb/67ed6ab2ef1a162a"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "ip-tg-2026031920150663000000000b",
            "name_prefix": "ip-tg-",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "App": "fvrk-dev-tg",
              "ManagedBy": "Terraform"
            },
            "tags_all": {
              "App": "fvrk-dev-tg",
              "ManagedBy": "Terraform"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-01559cc551ee9ce1f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_eks_cluster.cluster"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "grafana-k8s",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:010438478476:targetgroup/ip-tg-20260319201506861200000013/e615ae5a6239c596",
            "arn_suffix": "targetgroup/ip-tg-20260319201506861200000013/e615ae5a6239c596",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200-499",
                "path": "/api/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:010438478476:targetgroup/ip-tg-20260319201506861200000013/e615ae5a6239c596",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:ap-south-1:010438478476:loadbalancer/app/Fvrk-dev-alb/67ed6ab2ef1a162a"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "ip-tg-20260319201506861200000013",
            "name_prefix": "ip-tg-",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "App": "grafana-k8s",
              "ManagedBy": "Terraform"
            },
            "tags_all": {
              "App": "grafana-k8s",
              "ManagedBy": "Terraform"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-01559cc551ee9ce1f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_eks_cluster.cluster"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "jenkins-tg",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:010438478476:targetgroup/ip-tg-2026031920150667490000000c/4be4172dda5acc44",
            "arn_suffix": "targetgroup/ip-tg-2026031920150667490000000c/4be4172dda5acc44",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200-499",
                "path": "/login",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:010438478476:targetgroup/ip-tg-2026031920150667490000000c/4be4172dda5acc44",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:ap-south-1:010438478476:loadbalancer/app/Fvrk-dev-alb/67ed6ab2ef1a162a"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "ip-tg-2026031920150667490000000c",
            "name_prefix": "ip-tg-",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "App": "jenkins-tg",
              "ManagedBy": "Terraform"
            },
            "tags_all": {
              "App": "jenkins-tg",
              "ManagedBy": "Terraform"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-01559cc551ee9ce1f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_eks_cluster.cluster"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "keycloak",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:010438478476:targetgroup/ip-tg-20260319201506727900000010/57fd6711eb9502e9",
            "arn_suffix": "targetgroup/ip-tg-20260319201506727900000010/57fd6711eb9502e9",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200-499",
                "path": "/health/live",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:010438478476:targetgroup/ip-tg-20260319201506727900000010/57fd6711eb9502e9",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:ap-south-1:010438478476:loadbalancer/app/Fvrk-dev-alb/67ed6ab2ef1a162a"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "ip-tg-20260319201506727900000010",
            "name_prefix": "ip-tg-",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "App": "keycloak",
              "ManagedBy": "Terraform"
            },
            "tags_all": {
              "App": "keycloak",
              "ManagedBy": "Terraform"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-01559cc551ee9ce1f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_eks_cluster.cluster"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "kong-gateway",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:010438478476:targetgroup/ip-tg-20260319201506050500000006/76e8ec0ca764bd60",
            "arn_suffix": "targetgroup/ip-tg-20260319201506050500000006/76e8ec0ca764bd60",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200-499",
                "path": "/api/common/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:010438478476:targetgroup/ip-tg-20260319201506050500000006/76e8ec0ca764bd60",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:ap-south-1:010438478476:loadbalancer/app/Fvrk-dev-alb/67ed6ab2ef1a162a"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "ip-tg-20260319201506050500000006",
            "name_prefix": "ip-tg-",
            "port": 8000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "App": "kong-gateway",
              "ManagedBy": "Terraform"
            },
            "tags_all": {
              "App": "kong-gateway",
              "ManagedBy": "Terraform"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-01559cc551ee9ce1f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_eks_cluster.cluster"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "konga-service",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:010438478476:targetgroup/ip-tg-20260319201506728100000011/8f9713ec9b3cd878",
            "arn_suffix": "targetgroup/ip-tg-20260319201506728100000011/8f9713ec9b3cd878",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200-499",
                "path": "/status",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:010438478476:targetgroup/ip-tg-20260319201506728100000011/8f9713ec9b3cd878",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:ap-south-1:010438478476:loadbalancer/app/Fvrk-dev-alb/67ed6ab2ef1a162a"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "ip-tg-20260319201506728100000011",
            "name_prefix": "ip-tg-",
            "port": 1337,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "App": "konga-service",
              "ManagedBy": "Terraform"
            },
            "tags_all": {
              "App": "konga-service",
              "ManagedBy": "Terraform"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-01559cc551ee9ce1f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_eks_cluster.cluster"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "rabbit-mq",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:010438478476:targetgroup/ip-tg-20260319201506052100000009/b3028bd68c5d34ed",
            "arn_suffix": "targetgroup/ip-tg-20260319201506052100000009/b3028bd68c5d34ed",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200-499",
                "path": "/api/health/checks/virtual-hosts",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:010438478476:targetgroup/ip-tg-20260319201506052100000009/b3028bd68c5d34ed",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:ap-south-1:010438478476:loadbalancer/app/Fvrk-dev-alb/67ed6ab2ef1a162a"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "ip-tg-20260319201506052100000009",
            "name_prefix": "ip-tg-",
            "port": 15672,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "App": "rabbit-mq",
              "ManagedBy": "Terraform"
            },
            "tags_all": {
              "App": "rabbit-mq",
              "ManagedBy": "Terraform"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-01559cc551ee9ce1f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_eks_cluster.cluster"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "rabbit-mq-m",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:010438478476:targetgroup/ip-tg-20260319201506050500000005/fbedfcdbd96b9d75",
            "arn_suffix": "targetgroup/ip-tg-20260319201506050500000005/fbedfcdbd96b9d75",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200-499",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:010438478476:targetgroup/ip-tg-20260319201506050500000005/fbedfcdbd96b9d75",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "ip-tg-20260319201506050500000005",
            "name_prefix": "ip-tg-",
            "port": 5672,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "App": "rabbit-mq-m",
              "ManagedBy": "Terraform"
            },
            "tags_all": {
              "App": "rabbit-mq-m",
              "ManagedBy": "Terraform"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-01559cc551ee9ce1f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_eks_cluster.cluster"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "schedulerapi-dev",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:010438478476:targetgroup/ip-tg-2026031920150670900000000e/dcdd824815bca68f",
            "arn_suffix": "targetgroup/ip-tg-2026031920150670900000000e/dcdd824815bca68f",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200-499",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:010438478476:targetgroup/ip-tg-2026031920150670900000000e/dcdd824815bca68f",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:ap-south-1:010438478476:loadbalancer/app/Fvrk-dev-alb/67ed6ab2ef1a162a"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "ip-tg-2026031920150670900000000e",
            "name_prefix": "ip-tg-",
            "port": 5000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "App": "schedulerapi-dev",
              "ManagedBy": "Terraform"
            },
            "tags_all": {
              "App": "schedulerapi-dev",
              "ManagedBy": "Terraform"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-01559cc551ee9ce1f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_eks_cluster.cluster"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "text-extraction",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:010438478476:targetgroup/ip-tg-20260319201506049800000001/f5e1e1c7270c4ebe",
            "arn_suffix": "targetgroup/ip-tg-20260319201506049800000001/f5e1e1c7270c4ebe",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200-499",
                "path": "/api/document-text-extraction/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:010438478476:targetgroup/ip-tg-20260319201506049800000001/f5e1e1c7270c4ebe",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:ap-south-1:010438478476:loadbalancer/app/Fvrk-dev-alb/67ed6ab2ef1a162a"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "ip-tg-20260319201506049800000001",
            "name_prefix": "ip-tg-",
            "port": 8015,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "App": "text-extraction",
              "ManagedBy": "Terraform"
            },
            "tags_all": {
              "App": "text-extraction",
              "ManagedBy": "Terraform"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-01559cc551ee9ce1f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_eks_cluster.cluster"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "validus",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:010438478476:targetgroup/ip-tg-20260319201506050200000002/4d71efabcc31052c",
            "arn_suffix": "targetgroup/ip-tg-20260319201506050200000002/4d71efabcc31052c",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200-499",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:010438478476:targetgroup/ip-tg-20260319201506050200000002/4d71efabcc31052c",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:ap-south-1:010438478476:loadbalancer/app/Fvrk-dev-alb/67ed6ab2ef1a162a"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "ip-tg-20260319201506050200000002",
            "name_prefix": "ip-tg-",
            "port": 8020,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "App": "validus",
              "ManagedBy": "Terraform"
            },
            "tags_all": {
              "App": "validus",
              "ManagedBy": "Terraform"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-01559cc551ee9ce1f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_eks_cluster.cluster"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "main_uat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "airflow-uat",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:010438478476:targetgroup/k8s-airflow-uat/2a0d9520d0a738ec",
            "arn_suffix": "targetgroup/k8s-airflow-uat/2a0d9520d0a738ec",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200-499",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:010438478476:targetgroup/k8s-airflow-uat/2a0d9520d0a738ec",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:ap-south-1:010438478476:loadbalancer/app/Fvrk-uat-alb/9f5068f897ca72b4"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "k8s-airflow-uat",
            "port": 30061,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Environment": "uat",
              "ManagedBy": "Terraform"
            },
            "tags_all": {
              "Environment": "uat",
              "ManagedBy": "Terraform"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-01559cc551ee9ce1f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_eks_cluster.cluster"
          ]
        },
        {
          "index_key": "common-service-uat",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:010438478476:targetgroup/k8s-common-service-uat/5e966d25abdb5f1f",
            "arn_suffix": "targetgroup/k8s-common-service-uat/5e966d25abdb5f1f",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200-499",
                "path": "/api/common/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:010438478476:targetgroup/k8s-common-service-uat/5e966d25abdb5f1f",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:ap-south-1:010438478476:loadbalancer/app/Fvrk-uat-alb/9f5068f897ca72b4"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "k8s-common-service-uat",
            "port": 30038,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Environment": "uat",
              "ManagedBy": "Terraform"
            },
            "tags_all": {
              "Environment": "uat",
              "ManagedBy": "Terraform"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-01559cc551ee9ce1f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_eks_cluster.cluster"
          ]
        },
        {
          "index_key": "doc-classification-uat",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:010438478476:targetgroup/k8s-doc-classification-uat/c3b699822ea398c6",
            "arn_suffix": "targetgroup/k8s-doc-classification-uat/c3b699822ea398c6",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200-499",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:010438478476:targetgroup/k8s-doc-classification-uat/c3b699822ea398c6",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:ap-south-1:010438478476:loadbalancer/app/Fvrk-uat-alb/9f5068f897ca72b4"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "k8s-doc-classification-uat",
            "port": 30037,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Environment": "uat",
              "ManagedBy": "Terraform"
            },
            "tags_all": {
              "Environment": "uat",
              "ManagedBy": "Terraform"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-01559cc551ee9ce1f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_eks_cluster.cluster"
          ]
        },
        {
          "index_key": "doc-field-extraction-uat",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:010438478476:targetgroup/k8s-doc-field-extraction-uat/552b1960951454f8",
            "arn_suffix": "targetgroup/k8s-doc-field-extraction-uat/552b1960951454f8",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200-499",
                "path": "/api/field-extraction/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:010438478476:targetgroup/k8s-doc-field-extraction-uat/552b1960951454f8",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:ap-south-1:010438478476:loadbalancer/app/Fvrk-uat-alb/9f5068f897ca72b4"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "k8s-doc-field-extraction-uat",
            "port": 30036,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Environment": "uat",
              "ManagedBy": "Terraform"
            },
            "tags_all": {
              "Environment": "uat",
              "ManagedBy": "Terraform"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-01559cc551ee9ce1f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_eks_cluster.cluster"
          ]
        },
        {
          "index_key": "doc-page-classification-uat",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:010438478476:targetgroup/k8s-doc-page-classification-uat/ee93c6da24a1a2cb",
            "arn_suffix": "targetgroup/k8s-doc-page-classification-uat/ee93c6da24a1a2cb",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200-499",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:010438478476:targetgroup/k8s-doc-page-classification-uat/ee93c6da24a1a2cb",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:ap-south-1:010438478476:loadbalancer/app/Fvrk-uat-alb/9f5068f897ca72b4"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "k8s-doc-page-classification-uat",
            "port": 30035,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Environment": "uat",
              "ManagedBy": "Terraform"
            },
            "tags_all": {
              "Environment": "uat",
              "ManagedBy": "Terraform"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-01559cc551ee9ce1f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_eks_cluster.cluster"
          ]
        },
        {
          "index_key": "etl-uat",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:010438478476:targetgroup/k8s-etl-uat/3dddadaebb494c21",
            "arn_suffix": "targetgroup/k8s-etl-uat/3dddadaebb494c21",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200-499",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:010438478476:targetgroup/k8s-etl-uat/3dddadaebb494c21",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:ap-south-1:010438478476:loadbalancer/app/Fvrk-uat-alb/9f5068f897ca72b4"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "k8s-etl-uat",
            "port": 30042,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Environment": "uat",
              "ManagedBy": "Terraform"
            },
            "tags_all": {
              "Environment": "uat",
              "ManagedBy": "Terraform"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-01559cc551ee9ce1f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_eks_cluster.cluster"
          ]
        },
        {
          "index_key": "frame-uat",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:010438478476:targetgroup/k8s-frame-uat/d62638844752ae9d",
            "arn_suffix": "targetgroup/k8s-frame-uat/d62638844752ae9d",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200-499",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:010438478476:targetgroup/k8s-frame-uat/d62638844752ae9d",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:ap-south-1:010438478476:loadbalancer/app/Fvrk-uat-alb/9f5068f897ca72b4"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "k8s-frame-uat",
            "port": 30041,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Environment": "uat",
              "ManagedBy": "Terraform"
            },
            "tags_all": {
              "Environment": "uat",
              "ManagedBy": "Terraform"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-01559cc551ee9ce1f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_eks_cluster.cluster"
          ]
        },
        {
          "index_key": "fvrk-uat-tg",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:010438478476:targetgroup/k8s-fvrk-uat-tg/92e5fe6e967ce241",
            "arn_suffix": "targetgroup/k8s-fvrk-uat-tg/92e5fe6e967ce241",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200-499",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:010438478476:targetgroup/k8s-fvrk-uat-tg/92e5fe6e967ce241",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:ap-south-1:010438478476:loadbalancer/app/Fvrk-uat-alb/9f5068f897ca72b4"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "k8s-fvrk-uat-tg",
            "port": 30034,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Environment": "uat",
              "ManagedBy": "Terraform"
            },
            "tags_all": {
              "Environment": "uat",
              "ManagedBy": "Terraform"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-01559cc551ee9ce1f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_eks_cluster.cluster"
          ]
        },
        {
          "index_key": "keycloak-uat",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:010438478476:targetgroup/k8s-keycloak-uat/2e8921d87decc77a",
            "arn_suffix": "targetgroup/k8s-keycloak-uat/2e8921d87decc77a",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200-499",
                "path": "/health/live",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:010438478476:targetgroup/k8s-keycloak-uat/2e8921d87decc77a",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:ap-south-1:010438478476:loadbalancer/app/Fvrk-uat-alb/9f5068f897ca72b4"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "k8s-keycloak-uat",
            "port": 30131,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Environment": "uat",
              "ManagedBy": "Terraform"
            },
            "tags_all": {
              "Environment": "uat",
              "ManagedBy": "Terraform"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-01559cc551ee9ce1f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_eks_cluster.cluster"
          ]
        },
        {
          "index_key": "kong-gateway-uat",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:010438478476:targetgroup/k8s-kong-gateway-uat/2d0789b497586ccc",
            "arn_suffix": "targetgroup/k8s-kong-gateway-uat/2d0789b497586ccc",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200-499",
                "path": "/api/common/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:010438478476:targetgroup/k8s-kong-gateway-uat/2d0789b497586ccc",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:ap-south-1:010438478476:loadbalancer/app/Fvrk-uat-alb/9f5068f897ca72b4"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "k8s-kong-gateway-uat",
            "port": 30107,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Environment": "uat",
              "ManagedBy": "Terraform"
            },
            "tags_all": {
              "Environment": "uat",
              "ManagedBy": "Terraform"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-01559cc551ee9ce1f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_eks_cluster.cluster"
          ]
        },
        {
          "index_key": "kong-uat-admin",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:010438478476:targetgroup/k8s-kong-uat-admin/54377cc09458cc8a",
            "arn_suffix": "targetgroup/k8s-kong-uat-admin/54377cc09458cc8a",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200-499",
                "path": "/status",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:010438478476:targetgroup/k8s-kong-uat-admin/54377cc09458cc8a",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "k8s-kong-uat-admin",
            "port": 30133,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Environment": "uat",
              "ManagedBy": "Terraform"
            },
            "tags_all": {
              "Environment": "uat",
              "ManagedBy": "Terraform"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-01559cc551ee9ce1f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_eks_cluster.cluster"
          ]
        },
        {
          "index_key": "konga-uat",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:010438478476:targetgroup/k8s-konga-uat/e952c1bf4ce94964",
            "arn_suffix": "targetgroup/k8s-konga-uat/e952c1bf4ce94964",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200-499",
                "path": "/status",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:010438478476:targetgroup/k8s-konga-uat/e952c1bf4ce94964",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:ap-south-1:010438478476:loadbalancer/app/Fvrk-uat-alb/9f5068f897ca72b4"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "k8s-konga-uat",
            "port": 30134,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Environment": "uat",
              "ManagedBy": "Terraform"
            },
            "tags_all": {
              "Environment": "uat",
              "ManagedBy": "Terraform"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-01559cc551ee9ce1f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_eks_cluster.cluster"
          ]
        },
        {
          "index_key": "rabbitmq-uat",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:010438478476:targetgroup/k8s-rabbitmq-uat/029c6e3b456e5bc9",
            "arn_suffix": "targetgroup/k8s-rabbitmq-uat/029c6e3b456e5bc9",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200-499",
                "path": "/api/health/checks/virtual-hosts",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:010438478476:targetgroup/k8s-rabbitmq-uat/029c6e3b456e5bc9",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:ap-south-1:010438478476:loadbalancer/app/Fvrk-uat-alb/9f5068f897ca72b4"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "k8s-rabbitmq-uat",
            "port": 30039,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Environment": "uat",
              "ManagedBy": "Terraform"
            },
            "tags_all": {
              "Environment": "uat",
              "ManagedBy": "Terraform"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-01559cc551ee9ce1f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_eks_cluster.cluster"
          ]
        },
        {
          "index_key": "text-extraction-uat",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:010438478476:targetgroup/k8s-text-extraction-uat/ee8ad23d6f96fe36",
            "arn_suffix": "targetgroup/k8s-text-extraction-uat/ee8ad23d6f96fe36",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200-499",
                "path": "/api/framev3/document-text-extraction/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:010438478476:targetgroup/k8s-text-extraction-uat/ee8ad23d6f96fe36",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:ap-south-1:010438478476:loadbalancer/app/Fvrk-uat-alb/9f5068f897ca72b4"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "k8s-text-extraction-uat",
            "port": 30032,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Environment": "uat",
              "ManagedBy": "Terraform"
            },
            "tags_all": {
              "Environment": "uat",
              "ManagedBy": "Terraform"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-01559cc551ee9ce1f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_eks_cluster.cluster"
          ]
        },
        {
          "index_key": "validus-uat",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:010438478476:targetgroup/k8s-validus-uat/c2a38f7cbe3a388a",
            "arn_suffix": "targetgroup/k8s-validus-uat/c2a38f7cbe3a388a",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200-499",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:010438478476:targetgroup/k8s-validus-uat/c2a38f7cbe3a388a",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:ap-south-1:010438478476:loadbalancer/app/Fvrk-uat-alb/9f5068f897ca72b4"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "k8s-validus-uat",
            "port": 30031,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Environment": "uat",
              "ManagedBy": "Terraform"
            },
            "tags_all": {
              "Environment": "uat",
              "ManagedBy": "Terraform"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-01559cc551ee9ce1f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_eks_cluster.cluster"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "rabbit_messaging",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:010438478476:targetgroup/k8s-rabbit-mq-messaging/bd5508037167e194",
            "arn_suffix": "targetgroup/k8s-rabbit-mq-messaging/bd5508037167e194",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 10,
                "port": "traffic-port",
                "protocol": "TCP",
                "timeout": 10,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:010438478476:targetgroup/k8s-rabbit-mq-messaging/bd5508037167e194",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:ap-south-1:010438478476:loadbalancer/net/Fvrk-dev-nlb-front-door/fca2c7885497bd3f"
            ],
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "k8s-rabbit-mq-messaging",
            "port": 32525,
            "preserve_client_ip": "true",
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 0,
                "enabled": false,
                "type": "source_ip"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
                "enable_unhealthy_connection_termination": true,
                "unhealthy_draining_interval": 0
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-01559cc551ee9ce1f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_eks_cluster.cluster"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "alb_attachment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-south-1:010438478476:targetgroup/nlb-to-alb-bridge/10a8764692528099-20260108194507332700000001",
            "port": 443,
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:010438478476:targetgroup/nlb-to-alb-bridge/10a8764692528099",
            "target_id": "arn:aws:elasticloadbalancing:ap-south-1:010438478476:loadbalancer/app/Fvrk-dev-alb/67ed6ab2ef1a162a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_lb.main",
            "aws_lb_target_group.alb_bridge",
            "aws_security_group.alb_sg",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "data.aws_eks_cluster.cluster"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].mumbai",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:010438478476:route-table/rtb-020ef3ad3dd61e100",
            "id": "rtb-020ef3ad3dd61e100",
            "owner_id": "010438478476",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.10.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": "pcx-01ed878be2b7d044c"
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "192.168.0.0/20",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": "pcx-01ed878be2b7d044c"
              }
            ],
            "tags": {
              "Name": "FVRK-DEV-private-route-table"
            },
            "tags_all": {
              "Name": "FVRK-DEV-private-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-01559cc551ee9ce1f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].mumbai",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:010438478476:route-table/rtb-09a94c1924f915fb6",
            "id": "rtb-09a94c1924f915fb6",
            "owner_id": "010438478476",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b3b9f7a77adf26c6",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.10.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": "pcx-01ed878be2b7d044c"
              }
            ],
            "tags": {
              "Name": "FVRK-DEV-public-route-table"
            },
            "tags_all": {
              "Name": "FVRK-DEV-public-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-01559cc551ee9ce1f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].mumbai",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0679e61fd260db452",
            "route_table_id": "rtb-020ef3ad3dd61e100",
            "subnet_id": "subnet-0eaa3b1eb0fd9b5c5"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-041c91e4e8ec8eea7",
            "route_table_id": "rtb-020ef3ad3dd61e100",
            "subnet_id": "subnet-0fe84ca2cd6516780"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07ae5538eda8250d6",
            "route_table_id": "rtb-020ef3ad3dd61e100",
            "subnet_id": "subnet-0197f48fef1fcf6bd"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03c420f0b289825ec",
            "route_table_id": "rtb-020ef3ad3dd61e100",
            "subnet_id": "subnet-0740b38de02c34649"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].mumbai",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b431b9dedb581e5a",
            "route_table_id": "rtb-09a94c1924f915fb6",
            "subnet_id": "subnet-0676b17d05babe69f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01375dac03b2942b1",
            "route_table_id": "rtb-09a94c1924f915fb6",
            "subnet_id": "subnet-076ca5925fd436c79"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0111c9edfb54c3b78",
            "route_table_id": "rtb-09a94c1924f915fb6",
            "subnet_id": "subnet-0d4bb787f2a8e82d7"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0930c68ac0c763512",
            "route_table_id": "rtb-09a94c1924f915fb6",
            "subnet_id": "subnet-0fc395105f822381b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "airflow_efs_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:010438478476:security-group/sg-0a180ca2d4c194bbb",
            "description": "Allow NFS traffic for Airflow EFS",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a180ca2d4c194bbb",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.11.0.0/16"
                ],
                "description": "NFS from VPC",
                "from_port": 2049,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 2049
              }
            ],
            "name": "airflow-efs-sg",
            "name_prefix": "",
            "owner_id": "010438478476",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-01559cc551ee9ce1f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "aithon_efs_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:010438478476:security-group/sg-03e956c616a8d8121",
            "description": "Allow NFS traffic for Aithon Data EFS",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03e956c616a8d8121",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.11.0.0/16"
                ],
                "description": "NFS from VPC",
                "from_port": 2049,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 2049
              }
            ],
            "name": "aithon-data-efs-sg",
            "name_prefix": "",
            "owner_id": "010438478476",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-01559cc551ee9ce1f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:010438478476:security-group/sg-0b8a6bcbc4302994e",
            "description": "Allow HTTP and HTTPS from anywhere",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b8a6bcbc4302994e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8001,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8001
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "Fvrk-dev-alb-sg",
            "name_prefix": "",
            "owner_id": "010438478476",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Fvrk-dev-alb-sg"
            },
            "tags_all": {
              "Name": "Fvrk-dev-alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-01559cc551ee9ce1f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg_uat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:010438478476:security-group/sg-067df8f5840718d38",
            "description": "Allow HTTP and HTTPS from anywhere - UAT",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-067df8f5840718d38",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "Fvrk-uat-alb-sg",
            "name_prefix": "",
            "owner_id": "010438478476",
            "revoke_rules_on_delete": false,
            "tags": {
              "Env": "uat",
              "Name": "Fvrk-uat-alb-sg"
            },
            "tags_all": {
              "Env": "uat",
              "Name": "Fvrk-uat-alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-01559cc551ee9ce1f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].mumbai",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:010438478476:security-group/sg-0806eac4ea98b156a",
            "description": "Allow SSH inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0806eac4ea98b156a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "OLlama from everywhere",
                "from_port": 11434,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 11434
              },
              {
                "cidr_blocks": [
                  "10.10.0.0/16",
                  "110.227.248.141/32"
                ],
                "description": null,
                "from_port": 17912,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 17912
              },
              {
                "cidr_blocks": [
                  "10.10.0.0/16"
                ],
                "description": "PostgreSQL from anywhere",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              },
              {
                "cidr_blocks": [
                  "10.11.0.0/16",
                  "192.168.0.0/16",
                  "0.0.0.0/0"
                ],
                "description": null,
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "10.11.0.0/16",
                  "192.168.0.0/16",
                  "110.227.248.141/32"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "10.11.0.0/16"
                ],
                "description": "SSH from anywhere",
                "from_port": 17912,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 17912
              },
              {
                "cidr_blocks": [
                  "10.11.0.0/16"
                ],
                "description": null,
                "from_port": 6379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 6379
              },
              {
                "cidr_blocks": [
                  "10.11.0.0/16"
                ],
                "description": null,
                "from_port": 8123,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8123
              },
              {
                "cidr_blocks": [
                  "10.11.0.0/16"
                ],
                "description": null,
                "from_port": 9000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9000
              }
            ],
            "name": "Fvrk-dev-bastion-sg",
            "name_prefix": "",
            "owner_id": "010438478476",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Fvrk-dev-bastion-sg"
            },
            "tags_all": {
              "Name": "Fvrk-dev-bastion-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-01559cc551ee9ce1f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "efs_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:010438478476:security-group/sg-00f52ba2aaca6a61f",
            "description": "Allow NFS traffic for Text Extraction EFS",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00f52ba2aaca6a61f",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.11.0.0/16"
                ],
                "description": "NFS from VPC",
                "from_port": 2049,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 2049
              }
            ],
            "name": "text-extraction-efs-sg",
            "name_prefix": "",
            "owner_id": "010438478476",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-01559cc551ee9ce1f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "mongo-redis-dev_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].mumbai",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:010438478476:security-group/sg-032f017ac20f3b750",
            "description": "Allow SSH inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-032f017ac20f3b750",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.11.0.0/16",
                  "192.168.0.0/16",
                  "0.0.0.0/0"
                ],
                "description": null,
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "10.11.0.0/16",
                  "192.168.0.0/16",
                  "110.227.248.141/32",
                  "10.10.0.0/16"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "10.11.0.0/16",
                  "192.168.0.0/16"
                ],
                "description": null,
                "from_port": 27017,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 27017
              },
              {
                "cidr_blocks": [
                  "10.11.0.0/16",
                  "192.168.0.0/16"
                ],
                "description": null,
                "from_port": 6379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 6379
              }
            ],
            "name": "mongo-redis-dev-sg",
            "name_prefix": "",
            "owner_id": "010438478476",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "mongo-redis-dev-sg"
            },
            "tags_all": {
              "Name": "mongo-redis-dev-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-01559cc551ee9ce1f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].mumbai",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:010438478476:subnet/subnet-0eaa3b1eb0fd9b5c5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.11.64.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0eaa3b1eb0fd9b5c5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "010438478476",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "FVRK-DEV-private-subnet-1"
            },
            "tags_all": {
              "Name": "FVRK-DEV-private-subnet-1"
            },
            "vpc_id": "vpc-01559cc551ee9ce1f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:010438478476:subnet/subnet-0fe84ca2cd6516780",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.11.80.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fe84ca2cd6516780",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "010438478476",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "FVRK-DEV-private-subnet-2"
            },
            "tags_all": {
              "Name": "FVRK-DEV-private-subnet-2"
            },
            "vpc_id": "vpc-01559cc551ee9ce1f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:010438478476:subnet/subnet-0197f48fef1fcf6bd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "10.11.96.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0197f48fef1fcf6bd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "010438478476",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "FVRK-DEV-private-subnet-3"
            },
            "tags_all": {
              "Name": "FVRK-DEV-private-subnet-3"
            },
            "vpc_id": "vpc-01559cc551ee9ce1f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:010438478476:subnet/subnet-0740b38de02c34649",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.11.112.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0740b38de02c34649",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "010438478476",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "FVRK-DEV-private-subnet-4"
            },
            "tags_all": {
              "Name": "FVRK-DEV-private-subnet-4"
            },
            "vpc_id": "vpc-01559cc551ee9ce1f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].mumbai",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:010438478476:subnet/subnet-0676b17d05babe69f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.11.0.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0676b17d05babe69f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "010438478476",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "FVRK-DEV-public-subnet-1"
            },
            "tags_all": {
              "Name": "FVRK-DEV-public-subnet-1"
            },
            "vpc_id": "vpc-01559cc551ee9ce1f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:010438478476:subnet/subnet-076ca5925fd436c79",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.11.16.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-076ca5925fd436c79",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "010438478476",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "FVRK-DEV-public-subnet-2"
            },
            "tags_all": {
              "Name": "FVRK-DEV-public-subnet-2"
            },
            "vpc_id": "vpc-01559cc551ee9ce1f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:010438478476:subnet/subnet-0d4bb787f2a8e82d7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "10.11.32.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d4bb787f2a8e82d7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "010438478476",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "FVRK-DEV-public-subnet-3"
            },
            "tags_all": {
              "Name": "FVRK-DEV-public-subnet-3"
            },
            "vpc_id": "vpc-01559cc551ee9ce1f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:010438478476:subnet/subnet-0fc395105f822381b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.11.48.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fc395105f822381b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "010438478476",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "FVRK-DEV-public-subnet-4"
            },
            "tags_all": {
              "Name": "FVRK-DEV-public-subnet-4"
            },
            "vpc_id": "vpc-01559cc551ee9ce1f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].mumbai",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:010438478476:vpc/vpc-01559cc551ee9ce1f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.11.0.0/16",
            "default_network_acl_id": "acl-04ef1e45e6eebd67e",
            "default_route_table_id": "rtb-035d79c5852e79a8b",
            "default_security_group_id": "sg-0108b4237c43fe8ea",
            "dhcp_options_id": "dopt-0f728058c43979b29",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-01559cc551ee9ce1f",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-035d79c5852e79a8b",
            "owner_id": "010438478476",
            "tags": {
              "Name": "FVRK-DEV-VPC"
            },
            "tags_all": {
              "Name": "FVRK-DEV-VPC"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}